# StockTracker.Collector

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  env.example  main.py  pyproject.toml  pytest.ini
src/: orchestrator.py
src/collectors/: __init__.py  api_collector.py  library_collector.py
src/core/: __init__.py  base.py  config.py  models.py
src/sender/: __init__.py  message_sender.py
src/utils/: __init__.py  helpers.py
